--- a/color-sensor-on-stm32/projekt_zalic_lab.ioc
+++ b/color-sensor-on-stm32/projekt_zalic_lab.ioc
@@ -10,72 +10,78 @@ ETH.PhyAddress=0
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x00808CD2
+I2C2.I2C_Speed_Mode=I2C_Fast
+I2C2.IPParameters=Timing,I2C_Speed_Mode
+I2C2.Timing=0x00301739
 KeepUserPlacement=false
 Mcu.CPN=STM32F746ZGT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=ETH
 Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM3
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM3
+Mcu.IP8=USART3
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F746ZGTx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PH1/OSC_OUT
-Mcu.Pin11=PC1
-Mcu.Pin12=PA1
-Mcu.Pin13=PA2
-Mcu.Pin14=PA6
-Mcu.Pin15=PA7
-Mcu.Pin16=PC4
-Mcu.Pin17=PC5
-Mcu.Pin18=PB0
-Mcu.Pin19=PB13
+Mcu.Pin10=PF8
+Mcu.Pin11=PH0/OSC_IN
+Mcu.Pin12=PH1/OSC_OUT
+Mcu.Pin13=PC1
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA6
+Mcu.Pin17=PA7
+Mcu.Pin18=PC4
+Mcu.Pin19=PC5
 Mcu.Pin2=PE4
-Mcu.Pin20=PB14
-Mcu.Pin21=PD8
-Mcu.Pin22=PD9
-Mcu.Pin23=PG6
-Mcu.Pin24=PG7
-Mcu.Pin25=PC7
-Mcu.Pin26=PC8
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
+Mcu.Pin20=PB0
+Mcu.Pin21=PB13
+Mcu.Pin22=PB14
+Mcu.Pin23=PD8
+Mcu.Pin24=PD9
+Mcu.Pin25=PG6
+Mcu.Pin26=PG7
+Mcu.Pin27=PC7
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
 Mcu.Pin3=PE5
-Mcu.Pin30=PA10
-Mcu.Pin31=PA11
-Mcu.Pin32=PA12
-Mcu.Pin33=PA13
-Mcu.Pin34=PA14
-Mcu.Pin35=PC10
-Mcu.Pin36=PC11
-Mcu.Pin37=PC12
-Mcu.Pin38=PG11
-Mcu.Pin39=PG13
+Mcu.Pin30=PA8
+Mcu.Pin31=PA9
+Mcu.Pin32=PA10
+Mcu.Pin33=PA11
+Mcu.Pin34=PA12
+Mcu.Pin35=PA13
+Mcu.Pin36=PA14
+Mcu.Pin37=PC10
+Mcu.Pin38=PC11
+Mcu.Pin39=PC12
 Mcu.Pin4=PE6
-Mcu.Pin40=PB3
-Mcu.Pin41=PB7
-Mcu.Pin42=PB8
-Mcu.Pin43=PB9
-Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin40=PG11
+Mcu.Pin41=PG13
+Mcu.Pin42=PB3
+Mcu.Pin43=PB7
+Mcu.Pin44=PB8
+Mcu.Pin45=PB9
+Mcu.Pin46=VP_SYS_VS_Systick
 Mcu.Pin5=PC13
 Mcu.Pin6=PC14/OSC32_IN
 Mcu.Pin7=PC15/OSC32_OUT
-Mcu.Pin8=PF8
-Mcu.Pin9=PH0/OSC_IN
-Mcu.PinsNb=45
+Mcu.Pin8=PF0
+Mcu.Pin9=PF1
+Mcu.PinsNb=47
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
-MxCube.Version=6.13.0
-MxDb.Version=DB.6.0.130
+MxCube.Version=6.15.0
+MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -229,6 +235,10 @@ PE5.Locked=true
 PE5.Signal=GPIO_Output
 PE6.Locked=true
 PE6.Signal=GPIO_Output
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
 PF8.Locked=true
 PF8.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Label
@@ -260,6 +270,7 @@ PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
+ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
@@ -267,7 +278,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F746ZGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.17.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.17.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -288,7 +299,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM10_Init-TIM10-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
